# nbody

./: .gitignore  CMakeLists.txt  readme.md  simulation.ini
.github/workflows/: ci.yml
book/: book.epub  book.md
c/: readme.md
cpp/: .clang-tidy  CMakeLists.txt  config.h  gas.cpp  gas.h  ics.cpp  ini.h  integrator.cpp  integrator.h  main.cpp  nbody.cpp  particles.cpp  particles.h  readme.md  simulation.ini  state.h  types.h  utils.cpp  utils.h  visualization.cpp  visualization.h
docs/: Makefile
docs/source/: book.md  style.css
python/: config.py  engine.py  gas.py  ics.py  integrator.py  main.py  nbody.py  particles.py  simulation.ini  state.py  utils.py  visualization.py
scripts/: validate_run.py  viewer.py
src/: config.cpp  config.h  diagnostics.cpp  diagnostics.h  engine.cpp  engine.h  gas.cpp  gas.h  hdf5_writter.cpp  hdf5_writter.h  ics.cpp  ics.h  integrator.cpp  integrator.h  logger.cpp  logger.h  main.cpp  math_utils.h  particles.cpp  particles.h  state.h  types.cpp  types.h  utils.cpp  utils.h
tests/: test_gravity.cpp  test_hydro.cpp  test_ics.cpp  test_math.cpp  test_physics.cpp
viewer/: viewer.py
